impl/tests/errors/__snapshots__/test_array_index_assignment_type_mismatch.ambr
# serializer version: 1
# name: test_only_variable_output
  '''
  
  [31m[E14] Error:[0m Expected a type of [38;5;201mInt[0m but found [38;5;155mBool[0m
     [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mstdin:2:8[38;5;246m][0m
     [38;5;246m│[0m
   [38;5;246m2 │[0m [38;5;187ma[0m[38;5;249m[[0m[38;5;249m2[0m[38;5;249m][0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;155mt[0m[38;5;155mr[0m[38;5;155mu[0m[38;5;155me[0m
   [38;5;240m  │[0m [38;5;187m┬[0m      [38;5;155m─[0m[38;5;155m─[0m[38;5;155m┬[0m[38;5;155m─[0m  
   [38;5;240m  │[0m [38;5;187m╰[0m[38;5;187m─[0m[38;5;187m─[0m[38;5;187m─[0m[38;5;187m─[0m[38;5;187m─[0m[38;5;187m─[0m[38;5;187m─[0m[38;5;187m─[0m[38;5;187m─[0m[38;5;187m─[0m[38;5;187m─[0m[38;5;187m─[0m Since this is of type [38;5;187mArray<[0m[38;5;201mInt[0m[38;5;187m>[0m...
   [38;5;240m  │[0m          [38;5;155m│[0m   
   [38;5;240m  │[0m          [38;5;155m╰[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m ...expected this to be [38;5;201mInt[0m, but found [38;5;155mBool[0m
  [38;5;246m───╯[0m
  
  
  '''
# ---
